# CMakeSDL

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.c
modules/: FindSDL2.cmake
